src/css/themes/default.css
/* ... */
/*
 * Font
 * 
 * */
:root {
    --font-size: 14px;
    --font-size-smaller: calc(var(--font-size) - 1px);
    --font-size-xsmall: calc(var(--font-size) - 3px);
    --font-size-larger: 15px;
    --font-family: Inter, sans-serif;
    --monospace-size: 12px;
}

:root.mobile {
    --font-size: 16px;
    --font-size-smaller: 14px;
    --monospace-size: 13px;
}

/*
 * Default color theme
 * 
 * Tool: hsluv.org
 * 
 * */
:root /* h255 */ {
    --primary-5:   3  16  40; /* S:90 Luv:5 */
   --primary-10:   5  27  59; /* S:90 Luv:10 */
   --primary-20:  14  47  95; /* S:90 Luv:20 */
   --primary-30:  24  69 134; /* S:90 Luv:30 */
   --primary-40:  34  93 176; /* S:90 Luv:40 */
   --primary-50:  45 117 219; /* S:90 Luv:50 */
   --primary-60:  86 143 244; /* S:90 Luv:60 */
   --primary-70: 137 170 247; /* S:90 Luv:70 */
   --primary-80: 179 198 250; /* S:90 Luv:80 */
   --primary-90: 218 226 252; /* S:90 Luv:90 */
   --primary-95: 236 240 254; /* S:90 Luv:95 */
    }

/*
 * Default dark theme starts here
 * 
 * https://github.com/uBlockOrigin/uBlock-issues/issues/1027#issuecomment-629641072
 *   Assign a default background color if dark mode is enabled -- hopefully
 *   this will avoid flashes of white background until the document's own CSS
 *   overrides the default color value below.
 * 
 * */
@media (prefers-color-scheme: light) {
    :root {
        --surface-0-rgb: 255 255 255;
        --surface-1: rgb(var(--gray-95));
        --surface-2: rgb(var(--gray-90));
        --surface-3: rgb(var(--gray-80));
    }
}
@media (prefers-color-scheme: dark) {
    :root {
        --surface-0-rgb: 30 30 46; /* Catppuccin Base */
        --surface-1: rgb(24 24 37); /* Catppuccin Mantle */
        --surface-2: rgb(49 50 68); /* Catppuccin Surface0 */
        --surface-3: rgb(69 71 90); /* Catppuccin Surface1 */
    }
}

:root.light {
    --surface-0-rgb: 255 255 255;
    --surface-1: rgb(var(--gray-95));
    --surface-2: rgb(var(--gray-90));
    --surface-3: rgb(var(--gray-80));
}

:root.dark {
    --surface-0-rgb: 30 30 46; /* Catppuccin Base */
    --surface-1: rgb(24 24 37); /* Catppuccin Mantle */
    --surface-2: rgb(49 50 68); /* Catppuccin Surface0 */
    --surface-3: rgb(69 71 90); /* Catppuccin Surface1 */
}

/*
 * Components
 * 
 * */
:root {
    --font-size: 14px;

    --ubo-red: #800000;

    --elevation-up-surface: black;
    --elevation-up1-opacity: 4%;
    --elevation-up2-opacity: 8%;
    --elevation-down-surface: white;
    --elevation-down1-opacity: 16%;
    --elevation-down2-opacity: 32%;

    /* https://material.io/design/color/text-legibility.html#text-backgrounds */
    --ink-rgb: var(--ink-80);
    --ink-0: black;
    --ink-100: white;

    --border-1: rgb(var(--gray-75));
    --border-2: rgb(var(--gray-70));
    --border-3: rgb(var(--gray-65));
    --border-4: rgb(var(--gray-60));

    --accent-ink-3: var(--ink-1);
    --accent-surface-1: rgb(var(--primary-40));

    --link-ink: rgb(var(--primary-40));
    --link-hover-ink: rgb(var(--primary-30));

    /* buttons */
    --button-surface-rgb: var(--gray-80);

    --dashboard-tab-active-ink-rgb: var(--primary-40);
    --dashboard-tab-focus-surface-rgb: var(--primary-90);
    --dashboard-highlight-surface-rgb: var(--primary-90);

    --dashboard-happy-green: rgb(var(--green-65));

    /* popup panel */
    --popup-cell-cname-ink: #0054d7; /* h260 S:100 Luv:40 */
    --popup-cell-label-mixed-surface: rgb(var(--yellow-60)); /* mixed allow+block */
    --popup-icon-x-ink: rgb(var(--red-60));
    --popup-power-ink-rgb: var(--primary-50);

    /* horizontal line separator */
    --hr-ink: var(--surface-2);

    /* cloud widget */
    --cloud-total-used-surface: rgb(var(--violet-60) / 25%);
    --cloud-used-surface: rgb(var(--violet-60));

    /* misc */
    --error-surface: #c00004; /* h:12 S:100 Luv:40 */

    /* codemirror */
    --cm-active-line: rgb(var(--gray-90));
    --cm-cursor: var(--ink-0);
    --cm-foldmarker-ink: rgb(var(--blue-40));
    --cm-gutter-border: var(--surface-1);
    --cm-gutter-ink: var(--ink-3);
    --cm-gutter-surface: var(--surface-2);
    --cm-matchingbracket: rgb(var(--green-30));
    --cm-merge-copy-ink: rgb(var(--blue-50));
    --cm-merge-chunk-border: rgb(var(--surface-0-rgb) / 40%);
    --cm-merge-chunk-surface: rgb(var(--surface-0-rgb) / 40%);
    --cm-negative: #e32f00; /* h:15 S:100 Luv:50 */
    --cm-positive: #008a21; /* h:130 S:100 Luv:50 */
    --cm-selection-surface: rgb(var(--gray-80));
    --cm-selection-focused-surface: rgb(var(--primary-80));
    --cm-searching-ink: black;
    --cm-searching-surface: #fee300cc /* h75 S:100 Luv:90 a:80% */;
    --cm-search-match-surface: rgb(var(--yellow-40) / 50%);

    /* syntax highlight: static filtering */
    --sf-comment-ink: var(--ink-3);
    --sf-def-ink: #3c3aff; /* h:266 S:100 Luv:40 */
    --sf-directive-ink: var(--ink-1);
    --sf-error-ink: #ff8981; /* h15 S:100 Luv:70 */
    --sf-error-surface: #ff898133; /* h15 S:100 Luv:70 @ 20% */
    --sf-keyword-ink: #9b00ca; /* h:290 S:100 Luv:40 */
    --sf-notice-ink: var(--ink-4);
    --sf-readonly-ink: var(--ink-3);
    --sf-tag-ink: #006e2e /* h:135 S:100 Luv:40 */;
    --sf-unicode-ink: var(--ink-1);
    --sf-value-ink: #974900 /* h:30 S:100 Luv:40 */;
    --sf-variable-ink: var(--ink-1);
    --sf-warning-ink: #e49d00; /* h:50 S:100 Luv:70 */
    --sf-warning-surface: #e49d0033; /* h:50 S:100 Luv:70 @ 20% */

    /* syntax highlight: dynamic filtering */
    --df-allow-ink: var(--cm-positive);
    --df-block-ink: var(--cm-negative);
    --df-noop-ink: rgb(var(--dark-gray-10));

    /* logger */
    --logger-modified-surface: #0000c010;
    --logger-modified-em-surface: #0000c028;
    --logger-redirected-surface: rgb(var(--yellow-5) / 50%);
    --logger-scriptlet-surface: rgb(var(--yellow-30) / 50%);
}
/* ... */

